// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 eBjRBG"
  data-cy="test-hero"
>
  <div
    className="hero___StyledDiv-sc-qftwzr-4 hMRAxd"
  >
    <div
      className="hero___StyledDiv2-sc-qftwzr-5 hiknBk"
    >
      <p
        className="hero___StyledP-sc-qftwzr-7 jLprtR"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv3-sc-qftwzr-8 dJJcuR"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 eBjRBG"
  data-cy="undefined-hero"
>
  <div
    className="hero___StyledDiv-sc-qftwzr-4 eegkKF"
  >
    <div
      className="hero___StyledDiv2-sc-qftwzr-5 hiknBk"
    >
      <p
        className="hero___StyledP-sc-qftwzr-7 jLprtR"
      >
        Instrument
      </p>
      <h1>
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv3-sc-qftwzr-8 dJJcuR"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
    </div>
  </div>
</section>
`;
